Integrating old blog posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 {% include header.html %}
-<div class="row-fluid post">
-  <div class="span7 offset1">
+<div class="row-fluid">
+  <div class="span10 offset1 post box-shadow">
     <header>
       <h1 class="header-title">{{ page.title }}</h1>
       <p class="header-subtext">by {{ site.author }} on {{ page.date | date: "%b %d, %Y" }}</p>
