--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
       </div><!--/.nav-collapse -->
       <form class="navbar-search pull-right" method="get" action="http://google.com/search">
         <p>
-          <input type="hidden" name="q" value="site:????.com" />
+          <input type="hidden" name="q" value="site:{{site.url}}" />
           <input type="text" class="search-query" name="q" />
           <button class="btn btn-mini" type="submit"><i class="icon-search"></i></button>
         </p>
