--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -18,3 +18,7 @@
 <!-- Bootstrap -->
 <script type="text/javascript"
         src="/assets/js/bootstrap.min.js"></script>
+
+<!-- Lightbox -->
+<script type="text/javascript"
+        src="/assets/js/lightbox.js"></script>
