--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/syntax.css" rel="stylesheet" type="text/css">
     <link href="/assets/css/blah.css" rel="stylesheet" type="text/css">
+    <link href="/assets/css/lightbox/lightbox.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     {% include navbar.html %}
