--- a/assets/css/blah.css
+++ b/assets/css/blah.css
@@ -34,21 +34,28 @@ body {
 /**************************** blog.html ***************************************/
 
 .post-preview {
-  list-style-type: none;
+  clear: both;
+  width: 100%;
 }
 
 .post-preview .date {
-  float: left;
-  width: 12%;
+  float: right;
   font-family: Monaco, "Courier New", monospace;
   font-size: smaller;
 }
 
 .post-preview .title {
   float: left;
-  width: 40%;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.post-preview .title h1 {
+  font-size: large;
+}
+
+.post-preview .subtext {
+  clear: bloth;
 }
 
 /**************************** posts *******************************************/
@@ -79,6 +86,11 @@ body {
 
 .img-center img {
   max-width: 100%;
+}
+
+.img-center .caption {
+  font-size: 80%;
+  text-align: center;
 }
 
 /**************************** project.html ************************************/
