--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
         <a class="brand logo" href="#">
           <img src="/assets/img/transmogrifier2.png"></img>
         </a>
-        <ul class="nav">
+        <ul class="nav pull-right">
           <li><a href="/index.html">Home</a></li>
           <li><a href="/projects.html">Projects</a></li>
           <li><a href="/blog.html">Blog</a></li>
@@ -13,13 +13,6 @@
             <img src="/assets/img/glyphicons/glyphicons_417_rss.png"></img>
           </a></li>
         </ul>
-        <form class="navbar-search pull-right" method="get" action="http://google.com/search">
-          <p>
-            <input type="hidden" name="q" value="site:{{site.url}}" />
-            <input type="text" class="search-query" name="q" />
-            <button class="btn btn-mini" type="submit"><i class="icon-search"></i></button>
-          </p>
-        </form>
       </div> <!-- span10 offset1 -->
     </div> <!-- /container -->
   </div> <!-- /navbar-inner -->
