Content width is now responsive to viewport width

--- a/assets/css/blah.css
+++ b/assets/css/blah.css
@@ -1,6 +1,12 @@
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  width: 95%;
+}
+
 body {
   positive: relative;
-  padding-top: 75px;
   background-color: #eee;
   text-align: justify;
 }
@@ -89,7 +95,8 @@ a:hover {
 }
 
 .img-center {
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
