--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,19 +1,17 @@
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
-    <div class="container">
-      <div class="span10 offset1 nav-div">
-        <a class="brand logo" href="#">
-          <img src="/assets/img/transmogrifier2.png"></img>
-        </a>
-        <ul class="nav pull-right">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/projects.html">Projects</a></li>
-          <li><a href="/blog.html">Blog</a></li>
-          <li><a href="/feed.xml">
-            <img src="/assets/img/glyphicons/glyphicons_417_rss.png"></img>
-          </a></li>
-        </ul>
-      </div> <!-- span10 offset1 -->
-    </div> <!-- /container -->
+    <div class="nav-div">
+      <a class="brand logo" href="#">
+        <img src="/assets/img/transmogrifier2.png"></img>
+      </a>
+      <ul class="nav pull-right">
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/projects.html">Projects</a></li>
+        <li><a href="/blog.html">Blog</a></li>
+        <li><a href="/feed.xml">
+          <img src="/assets/img/glyphicons/glyphicons_417_rss.png"></img>
+        </a></li>
+      </ul>
+    </div> <!-- span10 offset1 -->
   </div> <!-- /navbar-inner -->
 </div> <!-- /navbar -->
