--- a/assets/css/blah.css
+++ b/assets/css/blah.css
@@ -89,13 +89,14 @@ a:hover {
 
 .post article h1 {
   font-size: 150%;
+  padding-left: .5em;
   border-width: 1px 0 1px 0;
   border-style: solid;
   border-color: rgba(0,0,0,0.3);
 }
 
 .img-center {
-  max-width: 400px;
+  max-width: 500px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
